--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #57a9e3;
+  --primary-color: #347ecd;
+  --secondary-color: #57a9e3;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
@@ -196,6 +197,12 @@ img {
   grid-gap: 1rem;
 }
 
+.grid-5 {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1rem;
+}
+
 .btn {
   display: inline-block;
   background: var(--light-color);
@@ -250,6 +257,14 @@ img {
 .badge-primary,
 .alert-primary {
   background: var(--primary-color);
+  color: #fff;
+}
+
+.btn-secondary,
+.bg-secondary,
+.badge-secondary,
+.alert-secondary {
+  background: var(--secondary-color);
   color: #fff;
 }
 
@@ -384,7 +399,8 @@ table th {
 
   .grid-2,
   .grid-3,
-  .grid-4 {
+  .grid-4,
+  .grid-5 {
     grid-template-columns: 1fr;
   }
 
